# llm-eval-lab

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_application_versions.py  0002_create_evaluation_suites.py  0003_create_test_case_executions.py  0004_create_evaluation_runs.py  0005_create_deterministic_scoring.py  0006_create_semantic_judging.py  0007_add_human_review_decisions.py  0008_create_release_decisions.py  0009_create_external_safety_evidence.py
backend/src/llm_eval_lab/: __init__.py  application_versions.py  config.py  database.py  demo_provider.py  demo_scenario.py  deterministic_scoring.py  evaluation_runs.py  evaluation_suites.py  external_safety_evidence.py  human_review.py  main.py  model_provider.py  models.py  ollama_provider.py  openai_compatible_provider.py  release_decision_policy.py  release_decisions.py  sample_suite.py  schemas.py  semantic_judging.py  test_case_executions.py
backend/tests/: test_application_versions_api.py  test_demo_scenario.py  test_deterministic_scoring.py  test_deterministic_scoring_api.py  test_evaluation_runs_api.py  test_external_safety_evidence_api.py  test_migrations.py  test_model_provider_contract.py  test_release_decisions_api.py  test_sample_evaluation_suite.py  test_semantic_judging.py  test_semantic_judging_api.py  test_test_case_executions_api.py
backend/tests/fixtures/: agent-incident-validation-report.json
docs/: DEVELOPMENT-WORKFLOW.md  FIVE-MINUTE-DEMO.md  PROJECT-BRIEF.md  (+1 more)
(+37 files in other folders)
