[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-lab-backend"
version = "0.1.0"
description = "Local-first evaluation API for LLM applications"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.116,<1",
  "httpx2>=2,<3",
  "pydantic-settings>=2.10,<3",
  "pymysql>=1.1,<2",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
